--- a/css/style.css
+++ b/css/style.css
@@ -289,8 +289,8 @@ button:hover {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
+    /*transform: translateX(100%);
+    transition: transform 0.5s ease-in;*/
   }
   #header-nav li {
     opacity: 0;
